# converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  benchmark.py  publish.sh  publish_auto.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: colab-hybrid-guide.md  comparison-guide.md  philosophy.md  why-formats-matter.md
src/converter/: __init__.py  __main__.py  batch_processor.py  cli.py  core.py
tests/: test_basic.py  test_batch_processor.py
