[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kazuba-converter"
version = "0.2.3"
description = "Converta documentos para Markdown estruturado — libere seu conhecimento de PDFs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Gabriel Gadêa", email = "gabrielgadea@gmail.com"}
]
keywords = ["pdf", "markdown", "converter", "ocr", "tables", "documents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    # Core document processing (mesmas do Batch2MD v7.2)
    "pymupdf4llm>=0.1",
    "pymupdf>=1.24.10",
    "pdfplumber>=0.11",
    
    # Office formats
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "extract-msg>=0.45",
    
    # HTML processing
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    
    # OCR Stack (cascade: Paddle → EasyOCR → Tesseract)
    "paddleocr>=2.7.3",
    "easyocr>=1.7",
    "pytesseract>=0.3",
    
    # Image processing
    "opencv-python-headless>=4.8",
    "pillow>=10.0",
    "numpy<2.0",  # Fix para compatibilidade Paddle
    
    # Table extraction (Docling TableFormer)
    "docling>=1.0",
    
    # CLI e UI
    "click>=8.0",
    "rich>=13.0",
    "tqdm>=4.66",
    
    # Utilitários
    "pyyaml>=6.0",
    "python-magic>=0.4",
]

[project.optional-dependencies]
gpu = [
    "paddlepaddle-gpu>=2.6.1",  # Para GPU CUDA
]
cpu = [
    "paddlepaddle>=2.6.1",  # Para CPU apenas
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
kazuba-converter = "converter.cli:main"

[project.urls]
Homepage = "https://github.com/kazuba/converter"
Documentation = "https://github.com/kazuba/converter#readme"
Repository = "https://github.com/kazuba/converter"
Issues = "https://github.com/kazuba/converter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
converter = "src/converter"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
